# hand-gesture-recognition-jester

./: .gitignore  README.md  colab.ipynb  config.json  dataaug.py  pyproject.toml  train_log.txt
data/: README.md
dataset/modified/annotations/: test.csv  train.csv  val.csv
results/c3d_epoch30/: test_results.json
results/c3d_no_aug_epoch20/: test_results.json
results/clstm_epoch50/: test_results.json
results/number_labels/classification_report/: classification_report_epoch15.csv  classification_report_epoch16.csv  classification_report_epoch17.csv  classification_report_epoch18.csv  classification_report_epoch19.csv  classification_report_epoch20.csv
results/number_labels/summary_metrics/: summary_metrics_epoch15.txt  summary_metrics_epoch20.txt
results/r2plus1d_epoch30/: test_results.json
results/r2plus1d_pretrained_epoch10/: test_results.json
results/readable_labels/: training_metrics.csv
results/readable_labels/classification_report/: classification_report_epoch15.csv  classification_report_epoch16.csv  classification_report_epoch17.csv  classification_report_epoch18.csv  classification_report_epoch19.csv  (+1 more)
src/: __init__.py  clean_data.py  dataloader.py  evaluate.py  evaluate_pretty.py  evaluate_range.py  jester_dataset.py  plot_confusion_matrix.py  plot_training_curves.py  test_model_loading.py  train.py
src/data/: __init__.py  preprocessing.py
src/data_processing/: clean_data.py  data_analysis.py  jester_dataset.py
src/evaluation/: __init__.py
src/models/: CLSTM.py  CNN3D.py  R2plus1D.py  __init__.py
src/utils/: helpers.py
(+4 files in other folders)
